# rustnn

./: .gitignore  Cargo.toml
logical/: Cargo.toml
logical/src/: classifier.rs  functions.rs  lib.rs  main.rs  tmp_main.rs
nnvisual/: Cargo.toml  titanic.csv
nnvisual/src/: main.rs
old/: Cargo.toml  todo.txt
old/src/: main.rs
src/: KNN.rs  data.rs  knn.rs  lib.rs  main.rs  mnist.rs  neural_network.rs  svm.rs
