[package]
name = "rustnn"
version = "0.1.0"
authors = ["Marcos Silveira <bymarkone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.0"
byteorder = "1.3.2"
ndarray = { version="0.13", default-features=false, features=["serde-1", "blas"] }
blas-src = { version = "0.4", default-features = false, features = ["accelerate"] }
accelerate-src = "0.3.2"
log = "0.4.8"
env_logger = "0.7.1"

#blas-src = { version = "0.4", default-features = false, features = ["intel-mkl"] }
#intel-mkl-src = "0.4.1"
#blas-src = { version = "0.4", default-features = false, features = ["openblas"] }
#openblas-src = { version="0.7.0", default-features=false, features=["cblas", "system"] }

